# Principle_of_Compilation

./: CMakeLists.txt  README.md  doc.md  jpp.prj  jpp2.grm  main.cpp  readme.md
CG/: CG.cpp  CG.h  CG_test.cpp  CG_test.h
LA/: LA.cpp  LA.h  LA_test.cpp  LA_test.h  buffer.cpp  buffer.h  hash.cpp  hash.h  sign.cpp  sign.h  tool.cpp  tool.h
LR/: LR.cpp  LR.h  LR_table.cpp  LR_table.h  LR_test.h  action_fun.cpp  action_fun.h  build_expr.cpp  build_expr.h  process.md
data/: action_table.csv  input_code.txt  inst.asm  kw.txt  reduce.txt  sign.txt  token.txt
data/CG_data/: input_code.txt  inst.asm  quad.txt  reduce.txt  sign.txt  token.txt
data/LA_data/: input_code.txt  kw.txt  my_test.txt  readme.txt  sign.txt  token.txt
data/LR_data/: goto_table.csv  input_code.txt  quad.txt  reduce.txt  sign.txt  token.txt
输出/: LR1分析表.htm  LR1状态机.dfa
